--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "devDependencies": {
-    "@prettier/plugin-php": "^0.14.0",
-    "prettier": "^2.0.4"
+    "@prettier/plugin-php": "^0.14.2",
+    "prettier": "2.0.5"
   }
 }
